--- a/Vehicles/Vehicles.API/Views/Brands/_Brand.cshtml
+++ b/Vehicles/Vehicles.API/Views/Brands/_Brand.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vehicles.API.Data.Entities.VehicleTypes
+﻿@model Vehicles.API.Data.Entities.Brand
 
 <div class="form-group">
     <label asp-for="Description" class="control-label"></label>
