--- a/Vehicles/Vehicles.API/Views/Procedures/Create.cshtml
+++ b/Vehicles/Vehicles.API/Views/Procedures/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vehicles.API.Data.Entities.VehicleTypes
+﻿@model Vehicles.API.Data.Entities.Procedures
 
 @{
     ViewData["Title"] = "Create";
@@ -6,13 +6,13 @@
 
 <h1>Crear</h1>
 
-<h4>Tipos de vehiculos</h4>
+<h4>Procedumiento</h4>
 <hr />
 <div class="row">
     <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <partial name="_VehiclesType" />
+            <partial name="_Procedures" />
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-success">Regresar</a>
